--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@mui/material": "^6.1.2",
     "@mui/x-charts": "^7.18.0",
     "@mui/x-data-grid": "^7.18.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
