--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^6.1.2",
     "@mui/x-charts": "^7.18.0",
     "@mui/x-data-grid": "^7.18.0",
+    "@mui/x-date-pickers": "^7.22.3",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
