--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^7.18.0",
     "@mui/x-data-grid": "^7.18.0",
     "@mui/x-date-pickers": "^7.22.3",
+    "@neondatabase/serverless": "^0.10.4",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
